--- a/src/components/sidebar/control.module.scss
+++ b/src/components/sidebar/control.module.scss
@@ -1,38 +1,79 @@
 .sidebar_user_control {
-  transform: translateY(-4rem);
-  background-color: #3a3f46;
   border-radius: 1em;
-  display: grid;
-  grid-template-columns: 4fr 7fr;
+  padding: 1em 2em;
+  display: flex;
+  justify-content: center;
   align-items: center;
-  div:nth-child(2) {
-    white-space: nowrap;
-  }
-  .arrow {
-    color: #fff;
-    font-family: "Montserrat", sans-serif;
-    font-size: 19px;
-    font-weight: 900;
-    padding: 0.5em 5%;
-    display: inline-block;
-  }
-  .link {
-    color: #fff;
-    font-family: "Montserrat", sans-serif;
-    font-size: 19px;
-    font-weight: 700;
-    width: 8em;
-    &:hover {
+  width: 100%;
+  background-color: #383d44;
+  margin-top: -4rem;
+
+  div {
+    background-color: #3a3f46;
+    span {
+      color: #ffffff;
+      font-size: 19px;
+      font-weight: 700;
+      &:hover {
+        color: #ffffff;
+      }
+    }
+    a {
+      color: #ffffff;
+      font-size: 19px;
+      font-weight: 700;
     }
   }
-  .aside_btn_active {
-  }
   @media screen and (max-width: 1550px) {
-    transform: translateY(-2.5rem);
-    grid-template-columns: 0 1fr;
-    text-align: center;
-    padding: .5em;
+    margin-top: -2rem;
   }
+  //select {
+  //  background-color: #3a3f46;
+  //  color: #ffffff;
+  //  border: none;
+  //  font-size: 19px;
+  //  font-weight: 700;
+  //  &:focus {
+  //    outline: none;
+  //    color: #ffffff;
+  //    background-color: #3a3f46;
+  //  }
+  //}
+
+  //transform: translateY(-4rem);
+  //background-color: #3a3f46;
+  //border-radius: 1em;
+  //display: grid;
+  //grid-template-columns: 4fr 7fr;
+  //align-items: center;
+  //div:nth-child(2) {
+  //  white-space: nowrap;
+  //}
+  //.arrow {
+  //  color: #fff;
+  //  font-family: "Montserrat", sans-serif;
+  //  font-size: 19px;
+  //  font-weight: 900;
+  //  padding: 0.5em 5%;
+  //  display: inline-block;
+  //}
+  //.link {
+  //  color: #fff;
+  //  font-family: "Montserrat", sans-serif;
+  //  font-size: 19px;
+  //  font-weight: 700;
+  //  width: 8em;
+  //  &:hover {
+  //  }
+  //}
+  //.aside_btn_active {
+  //}
+  //@media screen and (max-width: 1550px) {
+  //  transform: translateY(-2.5rem);
+  //  grid-template-columns: 0 1fr;
+  //  text-align: center;
+  //  padding: .5em;
+  //}
 }
 
 .bell {
