--- a/src/components/admin/admin.module.scss
+++ b/src/components/admin/admin.module.scss
@@ -1,7 +1,8 @@
 .admin_page {
-  background-color: #fff;
+  background-color: #3a3f46;
   min-height: 100vh;
   padding: 1em;
+  color: #fff;
 }
 
 .admin_page_control {
