--- a/src/components/create-offer-lot/add-form.module.scss
+++ b/src/components/create-offer-lot/add-form.module.scss
@@ -1,8 +1,19 @@
 .add_lot_page {
 	display: grid;
 	grid-gap: 1em;
+	background-color: #3a3f46;
+	min-height: 100%;
+	color: #fff;
+	align-content: start;
+}
+
+.add_lot_form {
+	color: #fff;
+	padding: 1em;
+	display: grid;
+	grid-gap: 1em;
 	h3 {
-		background-color: #fff;
+		color: #fff;
 		text-align: center;
 		padding: 0.3em 1em;
 	}
@@ -11,18 +22,17 @@
 			padding: .3em 0;
 		}
 	}
-}
-
-.add_lot_form {
-	background-color: #fff;
-	padding: 1em;
-	display: grid;
-	grid-gap: 1em;
 	.btn_back {
 		cursor: pointer;
-		padding: 0.1em 1em;
-		border: 1px solid #000;
+		border-radius: 0 1em;
+		background-color: #2e3137;
+		padding: .7em 2em;
+		display: inline-block;
 		width: fit-content;
+		text-align: center;
+		color: #ffffff;
+		font-size: 21px;
+		font-weight: 700;
 	}
 
 	form {
@@ -32,6 +42,15 @@
 		width: 100%;
 		@media screen and (max-width: 700px) {
 			grid-template-columns: 1fr;
+		}
+		input, select, textarea {
+			background-color: #3a3f46;
+			color: #fff;
+			border: 1px solid #565c66;
+			&:focus {
+				background-color: #3a3f46;
+				color: #fff;
+			}
 		}
 		label,
 		legend {
