(antd upload) remove image preview

--- a/src/pages/styles/global.scss
+++ b/src/pages/styles/global.scss
@@ -6,3 +6,8 @@ body {
   background: linear-gradient(-225deg, #3a3f46 0%, #212429 99%, #212429 100%) !important;
   font-family: 'Montserrat', sans-serif;
 }
+
+//antd photo preiew
+.anticon.anticon-eye {
+  display: none;
+}
