--- a/src/components/cabinet/update.module.scss
+++ b/src/components/cabinet/update.module.scss
@@ -9,3 +9,15 @@
   align-content: center;
   margin: 1em auto;
 }
+
+.image_cropper {
+  width: 100%;
+  max-width: 20em;
+  margin: 1em auto;
+}
+
+.cropped_image_preview {
+  width: 100%;
+  max-width: 20em;
+  margin: 1em auto;
+}
