--- a/src/components/favorites/fav.module.scss
+++ b/src/components/favorites/fav.module.scss
@@ -1,4 +1,8 @@
+$shadowSm: 0 .125rem .25rem rgba(0, 0, 0, 0.07) !important;
+$shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
+
 .favorites_page {
+	box-shadow: $shadow;
 	background-color: #373b42;
 	border-radius: 1em;
 	padding: 2em 4%;
@@ -12,15 +16,16 @@
 	width: 100%;
 	justify-content: space-between;
 	.posts_toggler {
+		box-shadow: $shadowSm;
 		cursor: pointer;
 		background: linear-gradient(to top, #c78550 0%, #f5c99e 100%);
 		color: #22262a;
 		font-family: 'Montserrat', sans-serif;
 		text-align: center;
-		padding: 1em 2em;
+		padding: .7em 1.5em;
 		display: inline-block;
 		width: fit-content;
-		font-size: 21px;
+		font-size: 20px;
 		font-weight: 700;
 		&:nth-child(1) {
 			border-right: 1px solid #3a3f46;
@@ -40,6 +45,7 @@
 
 .favorites_sort {
 	select {
+		cursor: pointer;
 		background-color: #3a3f46;
 		color: #ffffff;
 		&:focus {
@@ -109,7 +115,7 @@
 	grid-row: span 2;
 	position: relative;
 	overflow: hidden;
-	height: 22em;
+	height: 25em;
 	border-radius: 1em;
 
 	img {
@@ -380,26 +386,28 @@
 
 .toast {
 	position: absolute;
-	bottom: 0.5em;
-	right: 10%;
+	bottom: 2em;
+	right: 5em;
 	z-index: 10;
-	background-color: #fff;
+	background: none;
+	overflow: hidden;
 	border-radius: 0.3em;
-	border: 1px solid #ccc;
 	display: grid;
-	box-shadow: 0 0 10px 2px rgba(53, 53, 53, 0.27);
-	span {
-		padding: 0.3em 1em;
-		border-bottom: 1px solid #fff;
-		padding: 0.1em 0.5em;
+	box-shadow: 0 0 10px 5px rgba(53, 53, 53, 0.27);
+	div {
+		display: block;
+		padding: 0.5em 1em;
+		background-color: #424a56;
 		&:hover {
 			transition: 0.3s;
-			background-color: #eee;
+			background-color: #fff;
+			color: #000;
 		}
 	}
 }
 .toast_btn {
 	justify-self: flex-end;
+	cursor: pointer;
 }
 
 .active_burger {
