--- a/src/components/desire/offers.module.scss
+++ b/src/components/desire/offers.module.scss
@@ -1,4 +1,9 @@
+$shadowSm: 0 .125rem .25rem rgba(0, 0, 0, 0.07) !important;
+$shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
+
 .offers_list_wrap {
+	margin-top: 4em;
+	box-shadow: $shadow;
 	//background: linear-gradient( #33373d ,#2b2e33 );
 	background-color: #33373d;
 	border-radius: 1em;
@@ -40,7 +45,7 @@
 	grid-row: span 2;
 	position: relative;
 	overflow: hidden;
-	height: 22em;
+	height: 25em;
 	border-radius: 1em;
 
 	img {
