--- a/src/components/desire/user.module.scss
+++ b/src/components/desire/user.module.scss
@@ -1,7 +1,11 @@
+$shadowSm: 0 .125rem .25rem rgba(0, 0, 0, 0.07) !important;
+$shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
+
 .user_card {
+  box-shadow: $shadow;
   background: linear-gradient(to bottom, #373b42, #2e3137);
   border-radius: 1em;
-  padding: 3rem 12%;
+  padding: 9rem 10% 3rem 10%;
   color: #fff;
   display: grid;
   align-content: stretch;
@@ -16,6 +20,7 @@
     align-self: start;
     grid-row: span 2;
     margin-left: -1em;
+    margin-top: -8em;
     width: 9em;
     height: 9em;
     border: 4px solid #c78550;
@@ -114,10 +119,14 @@
       font-size: 17px;
       font-weight: 400;
       padding: .5em 1.5em;
+      transition: .3s;
       img {
         width: 35px;
         height: 35px;
         margin-right: 1em;
+      }
+      &:hover {
+        text-shadow: 0 5px 10px #999;
       }
     }
   }
