--- a/src/components/my-desires/offers-for-me.module.scss
+++ b/src/components/my-desires/offers-for-me.module.scss
@@ -1,4 +1,8 @@
+$shadowSm: 0 .125rem .25rem rgba(0, 0, 0, 0.07) !important;
+$shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
+
 .offers_list_sort {
+  box-shadow: $shadow;
   border-radius: 15px;
   background-color: #3a3f46;
   display: flex;
