--- a/src/pages/styles/global.scss
+++ b/src/pages/styles/global.scss
@@ -1,13 +1,54 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap');
 
+html {
+  min-height: 100vh;
+  width: 100%;
+}
+
 body {
-  display: block;
-  box-shadow: 0 41px 41px 8px rgba(29, 38, 49, 0.42);
-  background: linear-gradient(-225deg, #3a3f46 0%, #212429 99%, #212429 100%) !important;
+  margin: 0;
+  padding: 0;
+  //display: table-row;
+  //display: block;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+  box-shadow: 0 141px 141px 8px rgba(43, 47, 53, 0.8);
+  width: 100%;
+  background-image: linear-gradient(-225deg, #3a3f46 0%, #212429 99%, #212429 100%);
+  //background-repeat: no-repeat;
   font-family: 'Montserrat', sans-serif;
+
+  &::-webkit-scrollbar {
+    width: 12px;
+  }
+  &::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    //-webkit-border-radius: 10px;
+    //border-radius: 10px;
+    background-color: #525860;
+  }
+  &::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    background: #3a3f46;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+  }
+  &::-webkit-scrollbar-thumb:window-inactive {
+    background: #3a3f46;
+  }
+
+  #__next {
+    flex: 1;
+  }
 }
 
 //antd photo preiew
 .anticon.anticon-eye {
   display: none;
+}
+
+//
+.slick-slider, .slick-list, .slick-track {
+  //height: 100%;
 }
