slick slider carousel, ineteresting lots with new design

--- a/src/components/desire/user.module.scss
+++ b/src/components/desire/user.module.scss
@@ -5,7 +5,8 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   box-shadow: $shadow;
   background: linear-gradient(to bottom, #373b42, #2e3137);
   border-radius: 1em;
-  padding: 9rem 10% 3rem 10%;
+  padding: 10rem 1.5rem 3rem 1.5rem;
+  width: 100%;
   color: #fff;
   display: grid;
   align-content: stretch;
@@ -14,13 +15,15 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 .header {
   display: grid;
   grid-template-columns: auto auto;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 1fr 2fr;
   align-items: center;
+  z-index: 1;
+  transform: translateY(-8rem);
   .user_ava {
     align-self: start;
     grid-row: span 2;
-    margin-left: -1em;
-    margin-top: -8em;
+    margin-left: -.5em;
+    //margin-top: -10em;
     width: 9em;
     height: 9em;
     border: 4px solid #c78550;
@@ -45,6 +48,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   }
   .rating {
     align-self: start;
+    font-size: 1.5em;
   }
 }
 
@@ -52,8 +56,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   border-radius: 1em;
   padding: 1em;
   background-color: #3a3f46;
-  margin-top: -14rem;
+  margin-top: -11rem;
   display: grid;
+  gap: .8em;
 
   .status {
     text-align: end;
@@ -95,11 +100,11 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     border-radius: .8em;
     background-image: linear-gradient(to top, #3c855b 0%, #3c855b 1%, #7ab972 100%);
     text-align: center;
-    padding: .2em 1em;
+    padding: .5em 1em;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 1em;
+    margin-top: 0em;
     font-size: 17px;
     font-weight: 700;
   }
