--- a/src/components/desire/desire.module.scss
+++ b/src/components/desire/desire.module.scss
@@ -20,7 +20,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 .main_image {
 	grid-column: span 2;
 	width: 100%;
-	height: 27em;
+	height: 30em;
 	border-radius: 1em;
 	overflow: hidden;
 	position: relative;
@@ -56,6 +56,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		font-weight: 700;
 	}
 	p {
+		word-break: break-word;
 		font-size: 17px;
 		font-weight: 400;
 		min-height: 8em;
@@ -78,7 +79,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 .toast {
 	display: grid;
 	position: absolute;
-	border-radius: .2em;
+	border-radius: .3em;
 	top: 50%;
 	right: 3em;
 	background-color: #2e3137;
@@ -88,6 +89,10 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		font-weight: 600;
 		padding: .5em 1.5em;
 		transition: .3s;
+		a {
+			text-decoration: none;
+			color: #fff;
+		}
 		&:hover {
 			background-color: #3a3f46;
 		}
