--- a/src/components/interesting-lots/interesting-lots.module.scss
+++ b/src/components/interesting-lots/interesting-lots.module.scss
@@ -1,3 +1,7 @@
+
+$shadowSm: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.07) !important;
+$shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1) !important;
+
 .interesting_lots_list {
 	background-color: #3a3f46;
 	padding: 2.5em 1.5em 1em 1.5em;
@@ -9,35 +13,42 @@
 		list-style: none;
 		padding: 0;
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		grid-gap: 1em;
+		grid-template-columns: repeat(auto-fill, 20em);
+		justify-content: space-around;
+		grid-column-gap: 1em;
+		grid-row-gap: 3em;
 		li {
+			border-radius: 1em;
+			overflow: hidden;
+		}
+		@media screen and (max-width: 715px) {
+			grid-template-columns: 100%;
 		}
 	}
 	@media screen and (max-width: 768px) {
-		grid-column: span 1;
-		ul {
-			grid-template-columns: 1fr;
-		}
+			grid-column: span 1;
 	}
 }
 
 .interesting_img {
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 1em;
 	transform: translateY(-100%);
 	height: 1.5em;
 }
 
 .card {
+	box-shadow: $shadow;
+	border-radius: 1em;
+	border: 1px solid #2e3137;
 	color: #383b42;
 	position: relative;
-	height: 20em;
-	background-color: #d75359;
+	//height: 27em;
+	//background-color: #d75359;
 	display: grid;
-	grid-template-rows: 3fr 1fr;
-	overflow: hidden;
+	grid-template-rows: 20em 7em;
+	//overflow-x: hidden;
 	position: relative;
 }
 .card_header {
@@ -52,10 +63,11 @@
 	align-items: center;
 	align-content: center;
 	justify-content: space-between;
-	background-color: #2e3137;
+	background-color: #3a3f46;
 	span {
 		cursor: pointer;
 		padding: 0.5em 1em;
+		height: 2em;
 		img {
 			width: 1.5em;
 		}
@@ -63,20 +75,32 @@
 }
 .lot_img_holder {
 	width: 100%;
+	position: relative;
 	overflow: hidden;
-	height: 12em;
-	display: grid;
-	justify-content: center;
-	align-items: center;
-	align-content: center;
+	height: 20em;
+	//display: grid;
+	//justify-content: center;
+	//align-items: center;
+	//align-content: center;
 	img {
-		width: 100%;
+		//width: 100%;
+	}
+	@media screen and (max-width: 715px) {
+		img {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50%, -50%);
+			width: 100%;
+		}
 	}
 }
 .green_sign {
+	font-weight: 500;
 	position: absolute;
 	bottom: 0;
 	left: 0;
+	z-index: 1;
 	background-color: #8fb50c;
 	color: #fff;
 	padding: 0 0.5em;
@@ -93,14 +117,19 @@
 }
 .card_info {
 	position: relative;
-	padding: 0.5em;
-	background-color: #fff;
+	padding: 1em 0.5em;
+	background-color: #2e3137;
+	border-radius: 0 0 1em 1em;
+	//height: 7em;
 	h5 {
+		height: 1.5em;
+		overflow: hidden;
+		color: #fff;
 		font-weight: 500;
 	}
 }
 .card_price {
-	color: #383b42;
+	color: #fff;
 	font-weight: 500;
 	font-size: 1.6em;
 	font-weight: 700;
@@ -109,10 +138,11 @@
 .card_elipse {
 	position: absolute;
 	top: 0;
-	right: .2em;
+	right: 1em;
 	width: 1em;
 	height: 1em;
 	background-color: #383b42;
+	box-shadow: $shadow;
 	border-radius: 50%;
 	transform: translateY(-50%);
 	display: grid;
@@ -122,6 +152,9 @@
 	font-size: 3em;
 	transition: .3s;
 	user-select: none;
+	span {
+		transition: .5s;
+	}
 	&:hover {
 		background-color: #6c757d;
 	}
@@ -136,9 +169,9 @@
 	span:nth-child(4) {
 		cursor: pointer;
 		text-align: center;
-		padding: 0.3em 1em;
+		padding: 0.7em 1em;
 		font-weight: 700;
-		display: inline-block;
+		display: block !important;
 		background-color: #22262a;
 		color: #fff;
 		border-radius: .2em;
